# plonky2-zkedit

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: main.rs
transformations/: Cargo.toml
transformations/src/: lib.rs
zkedit/: Cargo.toml
zkedit/src/: cli.rs  main.rs  metadata.rs
zkp/: Cargo.toml
zkp/src/: builder.rs  circuit.rs  hash.rs  lib.rs  proof.rs  transformations.rs  util.rs
zkp/src/transformations/: crop.rs  mod.rs  util.rs
