[package]
name = "zkedit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#plonky2 = { git = "https://github.com/mir-protocol/plonky2", features = ["parallel", "timing"] }
#plonky2_util = { git = "https://github.com/mir-protocol/plonky2" }
#plonky2_field = { git = "https://github.com/mir-protocol/plonky2" }
#plonky2_u32 = { git = "https://github.com/mir-protocol/plonky2" }

plonky2 = { path = "../plonky2/plonky2", features = ["parallel", "timing"] }
plonky2_util = { path = "../plonky2/util" }
plonky2_field = { path = "../plonky2/field" }
plonky2_u32 = { path = "../plonky2/u32" }

anyhow = "1.0.40"
log = "0.4.14"
env_logger = "0.9.0"